--- a/frontend/src/app/company-detail/company-detail.component.html
+++ b/frontend/src/app/company-detail/company-detail.component.html
@@ -3,13 +3,12 @@
 
   <div [ngClass]="company.active ? 'is-active' : 'is-not-active'">
     <p><strong>ID:</strong> {{company.id}}</p>
-    <p><strong>Name:</strong> {{company.Name}}</p>
+    <p><strong>Name:</strong> {{company.name}}</p>
     <p><strong>Cif:</strong> {{company.cif}}</p>
-    <p><strong>Street:</strong> {{company.nif}}</p>
     <p><strong>City:</strong> {{company.city}}</p>
-    <p><strong>PostalCode:</strong> {{company.PostalCode}}</p>
+    <p><strong>PostalCode:</strong> {{company.postalCode}}</p>
     <p><strong>Values:</strong> {{company.values}}</p>
-    <p><strong>Treatments:</strong> {{company.Treatments}}</p>
+    <p><strong>Treatments:</strong> {{company.treatments}}</p>
 
   </div>
 
