Category-Detail OK

--- a/frontend/src/app/category-detail/category-detail.component.html
+++ b/frontend/src/app/category-detail/category-detail.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col text-center" style="margin: 20px">
 
-      @if (Categories) {
+      @if (Category) {
 
       <div class="card mb-3 p-3 mb-2 bg-primary-subtle text-primary-emphasis">
         <span class="border border-danger-subtle"></span>
