--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,33 +1,14 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">SIEMPRE BELLA</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Spa</a>
-        <a class="nav-link" href="#">Peluqueria</a>
-        <a class="nav-link" href="treatments">Tratamientos</a>
-        <a class="nav-link" href="categories">Categorias</a>
-        <!-- <a class="nav-link disabled" aria-disabled="true">Depilación</a> -->
-        <a class="nav-link" href="users">Usuarios</a>
-      </div>
-    </div>
-  </div>
-</nav>
+<app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
 
-<div class="container">
-  <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" _msttexthash="59059" _msthash="14">Hogar</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" _msttexthash="136006" _msthash="15">Funciones</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" _msttexthash="95589" _msthash="16">Precios</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" _msttexthash="425438" _msthash="17">Preguntas frecuentes</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" _msttexthash="107419" _msthash="18">Acerca de</a></li>
-    </ul>
-    <p class="text-center text-body-secondary" _msttexthash="356161" _msthash="19">© 2023 Compañía, Inc</p>
-  </footer>
-</div>
+<main style="min-height:500px;">
+  <router-outlet></router-outlet>
+</main>
+
+
+<app-footer></app-footer>
+
+
+
+
+
