Register finalizado_Revisar

--- a/frontend/src/app/user-login/user-login.component.html
+++ b/frontend/src/app/user-login/user-login.component.html
@@ -1,7 +1,8 @@
 
 <main class="form-signin w-100 m-auto">
     <form [formGroup]="loginForm" (ngSubmit)="save()">
-      
+      <!--Podemos poneer una imagen del logo aquí:
+          <img class="mb-4" src="" alt="" width="72" height="57">  -->
       <h1 class="h3 mb-3 fw-normal">Iniciar sesión</h1>
   
       <div class="form-floating">
