Corrección de BotonesRouterlink

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -6,12 +6,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Spa</a>
-        <a class="nav-link" href="#">Peluqueria</a>
-        <a class="nav-link" href="treatments">Tratamientos</a>
-        <a class="nav-link" href="categories">Categorias</a>
+        <a class="nav-link active" aria-current="page">Spa</a>
+        <a class="nav-link" >Peluqueria</a>
+        <a class="nav-link" routerLink="/treatments">Tratamientos</a>
+        <a class="nav-link" routerLink="/categories">Categorias</a>
+        <a class="nav-link" routerLink="/companies">Centros</a>
         <!-- <a class="nav-link disabled" aria-disabled="true">Depilación</a> -->
-        <a class="nav-link" href="users">Usuarios</a>
+        <a class="nav-link" routerLink="/users">Usuarios</a>
         <div>
 
           <style>
