--- a/frontend/src/app/treatment-detail/treatment-detail.component.html
+++ b/frontend/src/app/treatment-detail/treatment-detail.component.html
@@ -98,7 +98,7 @@
                         <h3 class="fw-bold mb-0 fs-4 text-primary-emphasis">
                           Categoria
                         </h3>
-                        <p>{{ treatment.category.name }}</p>
+                        <p>{{ treatment.category }}</p>
                       </div>
                     </div>
                   </div>
