--- a/frontend/src/app/treatment-detail/treatment-detail.component.html
+++ b/frontend/src/app/treatment-detail/treatment-detail.component.html
@@ -28,7 +28,7 @@
                   }
                 </ngb-carousel>
                 }
-                <button type="button" class="btn btn-outline-info" style="margin: 10px;" [routerLink]="">Reservar</button>
+                <button type="button" class="btn btn-outline-info" style="margin: 10px;" [routerLink]="['/booking', treatment.id, 'create']">Reservar</button>
               </div>
               <div class="col-8">
                 @if(treatment){
