--- a/frontend/src/app/company-form/company-form.component.html
+++ b/frontend/src/app/company-form/company-form.component.html
@@ -1,1 +1,24 @@
 <p>company-form works!</p>
+<form (ngSubmit)="onSubmit()">
+  <div>
+  <label for="nombre company">Nombre company:</label>
+  <input type="text" id="nombre Company" [(ngModel)]="nombre company" name="nombre Company" required>
+  </div>
+  <div>
+    <label for="cif">Cif:</label>
+    <input type="text" id="nif" [(ngModel)]="nif" name="nif" required>
+    </div>
+    <div>
+     <label for="street">Street:</label>
+      <input type="text" id="street" [(ngModel)]="street" name="street" required>
+      </div>
+      <div>
+        <label for="city">City:</label>
+        <input type="text" id="city" [(ngModel)]="city" name="city" required>
+        </div>
+        <div>
+          <label for="postalcode">Postalcode:</label>
+          <input type="text" id="Postalcode" [(ngModel)]="Postalcode" name="postalcode" required>
+          </div>
+ <button type="submit">Enviar</button>
+</form>
