Frontend User list y detail modificado

--- a/frontend/src/app/user-list/user-list.component.html
+++ b/frontend/src/app/user-list/user-list.component.html
@@ -20,7 +20,7 @@
                         <th scope="col">Ciudad</th>
                         <th scope="col">Dirección</th>
                         <th scope="col">Código postal</th>
-                        <th scope="col">Centros</th>
+                        <th scope="col"></th>
                     </tr>
                 </thead>
                 <tbody>
