Frontend Component Register modificado y finalizado

--- a/frontend/src/app/navbar/navbar.component.html
+++ b/frontend/src/app/navbar/navbar.component.html
@@ -22,7 +22,7 @@
             }
         </style>
           <button type="button" class="btn mi-boton-personalizado ms-5" routerLink="/login"><strong>Login</strong></button>
-          <button type="button" class="btn mi-boton-personalizado ms-5" routerLink="/register"><strong>Login</strong></button>
+          <button type="button" class="btn mi-boton-personalizado ms-5" routerLink="/register"><strong>Registro</strong></button>
         </div>
         </div>
     </div>
