--- a/frontend/src/app/footer/footer.component.html
+++ b/frontend/src/app/footer/footer.component.html
@@ -1,12 +1,113 @@
-<div class="container">
-  <footer class="py-3 my-4">
-    <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" _msttexthash="59059" _msthash="14">Hogar</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" _msttexthash="136006" _msthash="15">Funciones</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" _msttexthash="95589" _msthash="16">Precios</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" _msttexthash="425438" _msthash="17">Preguntas frecuentes</a></li>
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary" _msttexthash="107419" _msthash="18">Acerca de</a></li>
+<footer class="py-3 my-4">
+  <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <li class="nav-item">
+      <a
+        href="#"
+        class="nav-link px-2 text-body-secondary"
+        _msttexthash="59059"
+        _msthash="14"
+        >Home</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        href="companies"
+        class="nav-link px-2 text-body-secondary"
+        _msttexthash="136006"
+        _msthash="15"
+        >Centros</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        href="treatments"
+        class="nav-link px-2 text-body-secondary"
+        _msttexthash="95589"
+        _msthash="16"
+        >Tratamientos</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        href="categories"
+        class="nav-link px-2 text-body-secondary"
+        _msttexthash="425438"
+        _msthash="17"
+        >Categorías</a
+      >
+    </li>
+    <li class="nav-item">
+      <a
+        href="comments"
+        class="nav-link px-2 text-body-secondary"
+        _msttexthash="425438"
+        _msthash="17"
+        >Comentarios</a
+      >
+    </li>
+  </ul>
+  <div
+    class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 bg-custom"
+  >
+    <p>© 2024 Company, Inc. All rights reserved.</p>
+    <ul class="list-unstyled d-flex">
+      <li class="ms-3">
+        <a
+          class="link-body-emphasis"
+          href="https://www.marcoaldany.com/"
+          target="_blank"
+        >
+          <i class="bi bi-whatsapp fs-2"></i>
+        </a>
+      </li>
+      <li class="ms-3">
+        <a
+          class="link-body-emphasis"
+          href="https://www.marcoaldany.com/"
+          target="_blank"
+        >
+          <i class="bi bi-facebook fs-2"></i>
+        </a>
+      </li>
+
+      <li class="ms-3">
+        <a
+          class="link-body-emphasis"
+          href="https://www.treatwell.es/"
+          target="_blank"
+        >
+          <i class="bi bi-instagram fs-2"></i>
+        </a>
+      </li>
+
+      <li class="ms-3">
+        <a
+          class="link-body-emphasis"
+          href="https://www.treatwell.es/"
+          target="_blank"
+        >
+          <i class="bi bi-tiktok fs-2"></i>
+        </a>
+      </li>
+      <li class="ms-3">
+        <a
+          class="link-body-emphasis"
+          href="https://www.marcoaldany.com/"
+          target="_blank"
+        >
+          <i class="bi bi-twitter-x fs-2"></i>
+        </a>
+      </li>
+
+      <li class="ms-3">
+        <a
+          class="link-body-emphasis"
+          href="https://www.marcoaldany.com/"
+          target="_blank"
+        >
+          <i class="bi bi-linkedin fs-2"></i>
+        </a>
+      </li>
     </ul>
-    <p class="text-center text-body-secondary" _msttexthash="356161" _msthash="19">© 2023 Compañía, Inc</p>
-  </footer>
-</div>
+  </div>
+</footer>
