--- a/frontend/src/app/home/home.component.css
+++ b/frontend/src/app/home/home.component.css
@@ -8,3 +8,8 @@ p {
 h1 {
     text-align: center;
 }
+.mi-boton-rc {
+    background-color: rgb(209, 167, 243); /* Color de fondo violeta */
+    color: #ffffff; /* Color del texto blanco */
+    /* Otros estilos según sea necesario */
+}
