--- a/frontend/src/app/user-detail/user-detail.component.html
+++ b/frontend/src/app/user-detail/user-detail.component.html
@@ -1,7 +1,4 @@
-<div
-  class="container mt-5"
-  class="card mb-3 bg-success-subtle text-primary-emphasis"
->
+<div class="container mt-5 card mb-3 bg-success-subtle text-primary-emphasis">
   <div class="row">
     <div class="col-4 text-center">
       <div class="px-4 py-5">
@@ -15,10 +12,7 @@
         </div>
 
         } @else {
-        <img
-          class="img-fluid"
-          src="https://ui-avatars.com/api/?name=A&size=256"
-        />
+        <img class="img-fluid" src="https://ui-avatars.com/api/?name=A&size=256" />
         }
       </div>
     </div>
@@ -27,12 +21,10 @@
       <div class="container px-4 py-5" id="icon-grid">
         <h2 class="pb-2 border-bottom text-center fw-bold">Usuario Nº {{ user.id }}</h2>
 
-        <div
-          class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4 py-5"
-        >
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-3 g-4 py-5">
           <div class="col d-flex align-items-start">
             <i class="bi bi-person text-info flex-shrink-0 me-3 fs-2"></i>
-            
+
             <div>
               <h3 class="mb-0 fs-4 text-body-emphasis">
                 Nombre completo
@@ -65,23 +57,23 @@
               <h3 class="mb-0 fs-4 text-body-emphasis">Ciudad</h3>
               <p>{{ user.city }}</p>
             </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <i class="bi bi-house text-info flex-shrink-0 me-3 fs-2"></i>
+            <div>
+              <h3 class="mb-0 fs-4 text-body-emphasis">Dirección</h3>
+              <p>{{ user.street }}</p>
             </div>
-            <div class="col d-flex align-items-start">
-              <i class="bi bi-house text-info flex-shrink-0 me-3 fs-2"></i>
-              <div>
-                <h3 class="mb-0 fs-4 text-body-emphasis">Dirección</h3>
-                <p>{{ user.street }}</p>
-              </div>
+          </div>
+          <div class="col d-flex align-items-start">
+            <i class="bi bi-geo-alt text-info flex-shrink-0 me-3 fs-2"></i>
+            <div>
+              <h3 class="mb-0 fs-4 text-body-emphasis">
+                Código postal
+              </h3>
+              <p>{{ user.postalCode }}</p>
             </div>
-            <div class="col d-flex align-items-start">
-              <i class="bi bi-geo-alt text-info flex-shrink-0 me-3 fs-2"></i>
-              <div>
-                <h3 class="mb-0 fs-4 text-body-emphasis">
-                  Código postal
-                </h3>
-                <p>{{ user.postalCode }}</p>
-              </div>
-</div>
+          </div>
 
         </div>
       </div>
